css/cul/_miscellaneous.scss
// Breadcrumbs
// -------------------------
.breadcrumb {
	background: inherit;
	padding: 15px;
	margin-bottom: 0;
	li { font-size: .75em; }
	a { color: $medium-gray; }
}

// Buttons
// -------------------------
.btn-rss {
	// background: $dark-tan;
	background: #f06925;
	padding: 0 4px;
}
.btn-rss:hover { background: #d85f22; }

// Well
// -------------------------
.well { background: $pale-tan; }


// Footnotes
// -------------------------
.footnotes {
	border-top: 1px solid $tan;
	padding-top: 20px;
	p { font-size: 14px; }
}

// Citation styles
// ------------------------------

// .page-node-41 {
// 	.main-text {
// 		blockquote {
// 			padding: 0 30px;
// 			border-left: 0;
// 			p { font-size: 14px; }
// 		}
// 	}
// }
.citation {
	text-indent: -2em;
	margin: 1em 2em 2em 6em;
	line-height: 1.5em;
	font-size: 14px;
	font-family: courier, monospace;
	p { font-size: 1em; }
}

// Floated images
// -------------------------
.img-right {
	margin: 0 0 15px 15px;
	img { max-width: 200px; }
}

// Forms in the main content area
// -----------------------------

.main-content {
	.webform-client-form {
		margin: 20px 0;
		.form-item { margin: 0 0 1em; }
	}
}

// Social icons and links
// -----------------------------

.social-links {
	margin-bottom: 2em;
	i { 
		font-size: 40px;
	}
	a { color: $medium-gray; }
	.facebook-button { margin-right: 5px; }
}

// .social-links {
// 	margin-bottom: 2em;
// 	a {
// 		padding: 4px 8px 2px 5px;
// 		display: inline-block;
// 		background: white;
// 		border-radius: 3px;
// 		margin-left: 5px;
// 		margin-bottom: 5px;
// 		color: $link-color;
// 		font-size: 12px;
// 		font-weight: 700;
// 		i { font-size: 2.5em; }
// 	}
// 	a:hover { 
// 		color: $link-color;
// 		background: white; }
// 	.twitter-button {
// 		i { 
// 			color: #00c3f8; }
// 	}
// 	.facebook-button {
// 		i { 
// 			color: $link-color; }
// 	}
// }

// PDF icon
// -------------------------
.pdf-icon { margin-bottom: 5px; }

// Top link
// -------------------------
.main-content {
	.top-link {
		text-align: right;
		font-size: 12px;
	}
}


// Skip to content link
// http://webaim.org/techniques/skipnav/
// ---------------------------------------
#skiptocontent a {
	padding:6px;
	position: absolute;
	top:-40px;
	left:0px;
	color:white;
	border-right:1px solid white;
	border-bottom:1px solid white;
	border-bottom-right-radius:8px;
	background:transparent;
	-webkit-transition: top 1s ease-out, background 1s linear;
    transition: top 1s ease-out, background 1s linear;
    z-index: 100;
}

// Selectors table - set table header widths
// -----------------------------------------------------------------
.selector-phone { width: 15%; }
.selector-name { width: 30%; }


.form-email {
  display: block;
  width: 100%;
  height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
  padding: $padding-base-vertical $padding-base-horizontal;
  font-size: $font-size-base;
  line-height: $line-height-base;
  color: $input-color;
  vertical-align: middle;
  background-color: $input-bg;
  border: 1px solid $input-border;
  border-radius: $input-border-radius;
  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);

  // Customize the `:focus` state to imitate native WebKit styles.
  @include form-control-focus();

  // Disabled and read-only inputs
  // Note: HTML5 says that controls under a fieldset > legend:first-child won't
  // be disabled if the fieldset is disabled. Due to implementation difficulty,
  // we don't honor that edge case; we style them as disabled anyway.
  &[disabled],
  &[readonly],
  fieldset[disabled] & {
    cursor: not-allowed;
    background-color: $input-bg-disabled;
  }
}

// Login page -- add more space above CUL Login
// ------------------------------------------------

.block-cu-webauth { margin-top: 40px; }



// MEDIA QUERIES
// -------------------------

	// /* Extra small devices (phones, up to 480px) */
	// /* No media query since this is the default in Bootstrap */

	// /* Small devices (tablets, 768px and up) */
	// @media (min-width: @screen-sm) { ... }

	// /* Medium devices (desktops, 992px and up) */
	// @media (min-width: @screen-md) { ... }

	// /* Large devices (large desktops, 1200px and up) */
	// @media (min-width: @screen-lg) { ... }


/* Small devices (tablets, 768px and up) */
@media (min-width: $screen-sm) { 

	// Columned lists
	// -----------------------------
	.multicolumn {
	    -moz-column-count: 2;
	    -moz-column-gap: 20px;
	    -webkit-column-count: 2;
	    -webkit-column-gap: 20px;
	    column-count: 2;
	    column-gap: 20px;
	    li { font-size: 14px; }
	}

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: $screen-md) {
}

